# duckpond

./: .env.example  .gitignore  Dockerfile  ISSUE_PYTHON_3_14.md  PR_DESCRIPTION.md  README.md  alembic.ini  config.example.yaml  index.html  pyproject.toml
alembic/: env.py
alembic/versions/: a12ae57a3abf_initial_schema.py  c4c9cb91a45b_add_key_prefix_to_api_keys.py
duckpond/: __init__.py  __main__.py  config.py  exceptions.py  logging_config.py
duckpond/accounts/: __init__.py  auth.py  manager.py  models.py  quotas.py  schemas.py
duckpond/api/: __init__.py  accounts.py  app.py  auth.py  dependencies.py  exceptions.py  middleware.py  server.py  tenants.py
duckpond/api/routers/: __init__.py  accounts.py  auth.py  datasets.py  health.py  notebooks.py  query.py  streaming.py  upload.py
duckpond/catalog/: __init__.py  manager.py  schemas.py
duckpond/cli/: __init__.py  account.py  api.py  config.py  dataset.py  db.py  init.py  main.py  output.py  query.py  stream.py  tenant.py
duckpond/conversion/: __init__.py  base.py  config.py  converter.py  exceptions.py  factory.py  result.py
duckpond/conversion/strategies/: __init__.py  base.py  csv_strategy.py  json_strategy.py  parquet_strategy.py
duckpond/db/: __init__.py  base.py  migrations.py  session.py
duckpond/docker/: README.md  __init__.py  config.py  container.py  exceptions.py
duckpond/notebooks/: __init__.py  exceptions.py  files.py  manager.py  process.py  proxy.py  security.py  session.py
duckpond/query/: __init__.py  docker_executor.py  ducklake.py  executor.py  models.py  pool.py  validator.py
duckpond/static/: components-demo.html  index.html
duckpond/static/css/: login.css  (+4 more)
duckpond/storage/: __init__.py  backend.py  local_backend.py  s3_backend.py  utils.py
duckpond/streaming/: __init__.py  arrow_ipc.py  buffer_manager.py  exceptions.py  ingestor.py
duckpond/templates/: app.html  login.html
duckpond/tenants/: __init__.py  auth.py  manager.py  models.py  quotas.py  schemas.py
(+45 files in other folders)
